# myblog-api

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  build.rs
proto/blog/: engagement.proto  post.proto  service.proto  taxonomy.proto
proto/storage/: file.proto
scripts/: create-comment.sh  grpcurl.sh  list-categories.sh  list-category-published-posts.sh  list-published-posts.sh  list-tag-published-posts.sh
src/: lib.rs  main.rs
src/auth/: mod.rs  service.rs  user.rs
src/blog/: error.rs  mod.rs  post.rs  repository.rs  service.rs  taxonomy.rs
src/discussion/: comment.rs  mod.rs  service.rs
src/encoding/bson/: mod.rs
src/storage/: file.rs
