[package]
name = "myblog-api"
version = "3.0.0"
authors = ["Natcha Luangaroonchai <me@nomkhonwaan.com>"]
edition = "2018"

[[bin]]
name = "myblog-api"
path = "src/main.rs"

[dependencies]
alcoholic_jwt = { git = "https://cl.tvl.fyi/depot", branch = "canon" }
chrono = "0.4"
clap = "3.0.0-beta.2"
mongodb = "2.0.0-beta.2"
myblog-proto-rust = { path = "../myblog-proto-rust" }
prost-types = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.7.0", features = ["full"] }
tokio-stream = "0.1.6"
tonic = { git = "https://github.com/hyperium/tonic", branch = "master", features = ["tls"] }